[gd_scene load_steps=13 format=3 uid="uid://cal7thrqynpmy"]

[ext_resource type="Script" uid="uid://xny3we1bv7ff" path="res://scenes/component/command_button.gd" id="1_as5t4"]
[ext_resource type="Texture2D" uid="uid://cb5ad5kryfv71" path="res://assets/hud/command_button.png" id="2_l6wky"]
[ext_resource type="Texture2D" uid="uid://58kjcxamghj2" path="res://assets/hud/check_icon.png" id="3_3oggo"]
[ext_resource type="Texture2D" uid="uid://c2s6dhmlkxcqo" path="res://assets/hud/money_icon.png" id="4_m14wx"]
[ext_resource type="Script" uid="uid://bvexadi7j5afp" path="res://addons/retrograde/scenes/ui/component/ui_label.gd" id="5_p6j7g"]

[sub_resource type="AtlasTexture" id="AtlasTexture_as5t4"]
atlas = ExtResource("2_l6wky")
region = Rect2(0, 0, 248, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6wky"]
atlas = ExtResource("2_l6wky")
region = Rect2(0, 48, 248, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_npf6l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_as5t4")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6wky")
}],
"loop": true,
"name": &"hover",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_doqe3"]
atlas = ExtResource("3_3oggo")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_a33vc"]
atlas = ExtResource("4_m14wx")
region = Rect2(0, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_jua76"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_doqe3")
}],
"loop": true,
"name": &"check",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a33vc")
}],
"loop": true,
"name": &"money",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a33vc"]
size = Vector2(248, 48)

[node name="TowerCommandButton" type="Node2D"]
script = ExtResource("1_as5t4")

[node name="AnimatedSprite2DButton" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(124, 24)
sprite_frames = SubResource("SpriteFrames_npf6l")
autoplay = "default"

[node name="AnimatedSprite2DIcon" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(16, 24)
sprite_frames = SubResource("SpriteFrames_jua76")
animation = &"money"
autoplay = "money"

[node name="UILabelPrice" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 32.0
offset_top = 6.0
offset_right = 72.0
offset_bottom = 24.0
script = ExtResource("5_p6j7g")
metadata/_custom_type_script = "uid://bvexadi7j5afp"

[node name="UILabelName" type="Label" parent="."]
unique_name_in_owner = true
offset_right = 40.0
offset_bottom = 18.0
script = ExtResource("5_p6j7g")
metadata/_custom_type_script = "uid://bvexadi7j5afp"

[node name="Area2DButton" type="Area2D" parent="."]
position = Vector2(124, 24)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DButton"]
shape = SubResource("RectangleShape2D_a33vc")

[connection signal="input_event" from="Area2DButton" to="." method="_on_area_2d_button_input_event"]
[connection signal="mouse_entered" from="Area2DButton" to="." method="_on_area_2d_button_mouse_entered"]
[connection signal="mouse_exited" from="Area2DButton" to="." method="_on_area_2d_button_mouse_exited"]
